olm-bundle/deploy/operator.yaml
#
#  Copyright (c) 2018-2021 Red Hat, Inc.
#    This program and the accompanying materials are made
#    available under the terms of the Eclipse Public License 2.0
#    which is available at https://www.eclipse.org/legal/epl-2.0/
#
#  SPDX-License-Identifier: EPL-2.0
#
#  Contributors:
#    Red Hat, Inc. - initial API and implementation
#    IBM Corporation - implementation
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeready-operator
  labels:
    app.kubernetes.io/name: che
    app.kubernetes.io/instance: che
    app.kubernetes.io/managed-by: olm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeready-operator
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        productName: ""
        productMetric: "APPLICATION"
        productID: "00000000000000000000000000000000"
      labels:
        app: codeready-operator
        app.kubernetes.io/name: che
        app.kubernetes.io/instance: che
        app.kubernetes.io/component: codeready-operator
        app.kubernetes.io/managed-by: olm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
                    - s390x
      containers:
        - name: codeready-operator
          image: registry.redhat.io/codeready-workspaces/crw-2-rhel8-operator@sha256:a24dc83d8cdd8af715f0c4f235dcba0736bf395b7029ceaed0b8a683da5f74e0
          ports:
            - containerPort: 60000
              name: metrics
          command:
            - /usr/local/bin/che-operator
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 6789
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - stat
                - /tmp/operator-sdk-ready
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 10
            successThreshold: 1
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
      restartPolicy: Always
      serviceAccountName: codeready-operator
      terminationGracePeriodSeconds: 20
      hostIPC: false
      hostNetwork: false
      hostPID: false
