olm-bundle/deploy/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: codeready-workspaces
  labels:
    app.kubernetes.io/name: che
    app.kubernetes.io/instance: che
    app.kubernetes.io/managed-by: olm
spec:
  podSelector: {}
  policyTypes:
  - Ingress
